--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
       - run: yarn dedupe --check
       - run: yarn test
       - run: yarn tsc
-      - run: yarn lint
+      - run: yarn lint --fix
